--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.6",
     "@clerk/clerk-expo": "^2.19.17",
     "clsx": "^2.1.1",
     "convex": "^1.31.5",
