--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
@@ -16,40 +16,42 @@
     "@clerk/clerk-expo": "^2.19.17",
     "@gorhom/bottom-sheet": "^5.2.8",
     "@react-native-community/netinfo": "^11.4.1",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "^2.0.2",
     "clsx": "^2.1.1",
     "convex": "^1.31.5",
-    "expo": "~52.0.0",
+    "expo": "~54.0.31",
     "expo-clipboard": "^8.0.8",
+    "expo-dev-client": "^6.0.20",
     "expo-haptics": "^15.0.8",
     "expo-linking": "^8.0.11",
-    "expo-router": "~4.0.0",
+    "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
-    "expo-status-bar": "~2.0.0",
+    "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.30.0",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^4.1.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~4.1.6",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "~4.16.0",
     "svix": "^1.84.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.17",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.0",
+    "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.0",
+    "jest-expo": "~54.0.16",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.0"
   },
