feat: enhance animations and improve iOS project settings

--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.cartshare.app"
+      "bundleIdentifier": "com.cartshare.app",
+      "appleTeamId": "W6SZ22J8C2"
     },
     "android": {
       "adaptiveIcon": {
